# tp_final_py_veron_garrido_aguero

./: .gitignore  AGENTS.md  README.md  api.py  main.py  pyproject.toml  reg-log-model.ipynb  requeriments.txt  skills-lock.json  train_fraud_model.py
backend/: main.py  utils.py
data/: main_doc.ipynb
frontend/: app.py
model/: fraud_model.pkl  iforest.ipynb  model_main.ipynb
models/: fraud_model.pkl
